--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:loopj/android-async-http
 [submodule "ext/commons-io"]
 	path = ext/commons-io
-	url = git@github.com:apache/commons-io
+	url = git@github.com:samv/commons-io
 [submodule "ext/commons-lang"]
 	path = ext/commons-lang
 	url = git@github.com:apache/commons-lang
