--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,7 @@
 	url = git@github.com:loopj/android-async-http
 [submodule "ext/commons-io"]
 	path = ext/commons-io
+	branch = release-2.4
 	url = git@github.com:samv/commons-io
 [submodule "ext/commons-lang"]
 	path = ext/commons-lang
