--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/app_icon">
         <activity android:name="SearchResultsActivity"
+                  android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
