--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="photo.droid"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application android:label="@string/app_name" android:icon="@drawable/app_icon">
         <activity android:name="SearchResultsActivity"
                   android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
