--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,5 +14,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="ImageDisplayActivity"
+                  android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+                  android:label="@string/app_name" />
     </application>
 </manifest>
