--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,6 @@
         </activity>
         <activity android:name="ImageDisplayActivity"
                   android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
-                  android:label="@string/app_name" />
+                  android:label="@string/title_image_display" />
     </application>
 </manifest>
