--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,18 +4,27 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="15" />
 
-    <application android:label="@string/app_name" android:icon="@drawable/app_icon">
-        <activity android:name="SearchResultsActivity"
-                  android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
-                  android:label="@string/app_name">
+    <application
+       android:label="@string/app_name"
+       android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+       android:icon="@drawable/app_icon">
+        <activity
+           android:name="SearchResultsActivity"
+           android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ImageDisplayActivity"
-                  android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
-                  android:label="@string/title_image_display" />
+        <activity
+           android:name="ImageDisplayActivity"
+           android:label="@string/title_image_display"
+           />
+        <activity
+           android:name="SearchOptionsActivity"
+           android:label="@string/title_search_options"
+           />
     </application>
 </manifest>
